# difference-generator

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  setup.cfg  todo.md
.github/workflows/: check-linter.yml  coverage.yml  hexlet-check.yml  linter-check.yml  main.yml
gendiff/: __init__.py  cli.py  diff_generation.py  formatting.py  functions.py  getting_data.py  parsing.py  receiving.py  tree.py
gendiff/formatters/: jsonify.py  plain.py  stylish.py
gendiff/functions/: convert.py  functions.py  parsing.py
gendiff/scripts/: formatting.py  gendiff.py  generate_diff.py  parsing.py
gendiff/scripts/formatters/: jsonify.py  plain.py  stylish.py
tests/: conftest.py  paths.py  test_compare_files.py  test_convert.py  test_experimental.py  test_format_diff.py  test_formatting.py  test_functions.py  test_generate_diff.py  test_get_format.py  test_parsing.py  test_read_and_parse.py  test_receiving.py  todo.md
tests/fixtures/: _paths.py  console.txt  test_tree_r.txt
tests/fixtures/expected/: flat_json_expected.json  flat_json_expected.txt  tree_expected.txt
tests/fixtures/test_gen_diff/2/: file1.yaml
