[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
repository = "https://github.com/kazyamov/python-project-50"
packages = [ { include = 'gendiff' }, ]
classifiers = [
	"Environment :: Console",
	"Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
Tree = "^0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
