[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Utility for comparesing two files and find difference"
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
repository = "https://github.com/kaziamov/python-project-50"
packages = [ { include = 'gendiff' }, ]
classifiers = [
	"Environment :: Console",
	"Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'